DOM, querrySelector, remove add tags.

--- a/Curso_Cataline/Basecamp/Javascript/DOM/DOM4_PatternPrevention/index.html
+++ b/Curso_Cataline/Basecamp/Javascript/DOM/DOM4_PatternPrevention/index.html
@@ -27,8 +27,13 @@
     </style>
 </head>
 <body>
-   <button class="buttonSend">Enviar</button>
-   <input class="inputForm" type="text" placeholder="Idade" />
+    <a class="link" href="#sobre">Sobre</a>
+    <form action="">
+        <button class="buttonSend">Enviar</button>
+        <input class="inputForm" type="text" placeholder="Idade" />
+    </form>
+
    <script type="text/javascript" src="./script.js"></script>
+
 </body>
 </html> 
