--- a/Curso_Cataline/Basecamp/Javascript/Practice/index.html
+++ b/Curso_Cataline/Basecamp/Javascript/Practice/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./style.css">
 
 </head>
-<body>
+<body> 
     <form class="cepForm" action="">
-        <input class="cepInput" type="number" placeholder="Digite seu CEP">
+        <input class="cepInput" type="text" placeholder="Digite seu CEP">
         <button type="submit">Consultar CEP</button>
     </form>
     <main></main>
 
-    <!-- <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script> -->
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script type="text/javascript" src="./script.js"></script>   
 </body>
 </html>
